# af-core

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.agent-fox/: config.toml
.agent-fox/specs/01_project_scaffold/: design.md  prd.md  requirements.md  tasks.md  test_spec.md
.agent-fox/specs/02_campaign_session/: design.md  requirements.md  tasks.md
.agent-fox/specs/03_agent_pipeline/: design.md  requirements.md  tasks.md  test_spec.md
.agent-fox/specs/04_af_spec_cli/: design.md  prd.md  requirements.md  tasks.md  test_spec.md
.agent-fox/specs/05_spec_skill/: design.md  prd.md  requirements.md  tasks.md  test_spec.md
.agent-fox/specs/06_refine_question_export/: tasks.md
.agent-fox/specs/07_refine_answer_recording/: tasks.md
.agent-fox/specs/08_afspec_validate_artifact/: tasks.md
.agent-fox/specs/09_cli_progress_feedback/: tasks.md
.agent-fox/specs/10_monorepo_restructure/: design.md  prd.md  requirements.md  tasks.md  test_spec.md
.agent-fox/specs/11_mvp_execution/: prd.md
docs/: coordination-layer.md  runtime-layer.md  services-architecture.md
docs/errata/: 10_workspace_dependency_syntax.md
examples/: README.md
examples/golang_service/: README.md  answers.json  prd.md  questions.json
speclib/: __init__.py  agent.py  auth.py  cli.py  config.py  ui.py
speclib/skill/: __init__.py
tests/: conftest.py  conftest_agent.py  test_agent.py  test_auth.py  test_campaign.py  test_cli.py  test_config.py  test_install_skill.py  test_prompts.py  test_scaffold.py  test_session.py  test_session_agent.py  test_skill.py  test_ui.py
(+30 files in other folders)
